注册功能完善

--- a/scss/sign.scss
+++ b/scss/sign.scss
@@ -11,7 +11,7 @@ header {
     font-size: $title-fz;
     color: $colorWhite;
     position: relative;
-    a{
+    a {
         color: $colorWhite;
     }
     span {
@@ -42,8 +42,8 @@ article {
         @include setInput(3px);
         width: 100%;
         height: 2.8rem;
-        margin-bottom: 2rem;
         text-indent: 2.5rem;
+        margin-bottom: 0.2rem;
         font-size: 0.8rem;
         border-bottom: 1px solid $title-bgcolor;
     }
@@ -52,6 +52,20 @@ article {
     }
     .password {
         background: url(../images/ico-password.png) no-repeat 0.5rem center;
+    }
+    span {
+        font-size: 0.6rem;
+        line-height: 1rem;
+        visibility: hidden;
+        padding-left: 1rem;
+    }
+    .error {
+        color: rgb(242, 95, 17);
+        visibility: visible;
+    }
+    .errorSec {
+        color: rgb(242, 95, 17);
+        visibility: visible;
     }
 }
 
@@ -70,4 +84,51 @@ article {
         letter-spacing: 0.5rem;
         background: $login-logbtn-bgcolor;
     }
+}
+
+//正在进行注册——遮罩层
+.signing-wrap {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.41);
+    top: 0;
+    left: 0;
+    display: none;
+    span,em {
+        position: absolute;
+        top: 50%;
+        color: $colorWhite;
+    }
+    //loading的动画
+    span{
+        left: 40%;
+        width: 3rem;
+        height: 3rem;
+        background: $colorWhite;
+        animation: 2s rotateplane infinite;
+    }
+    em{
+        left: 50%;
+        font-size: 3rem;
+        transform: translateX(-50%);
+        &:before{
+            content: "\f00c";
+        }
+        display: none;
+    }
+}
+
+//通过旋转实现loading效果
+@keyframes rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+  } 50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+  } 100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
 }
