--- a/css/sign.css
+++ b/css/sign.css
@@ -88,14 +88,25 @@ article {
       border-radius: 3px;
     width: 100%;
     height: 2.8rem;
-    margin-bottom: 2rem;
     text-indent: 2.5rem;
+    margin-bottom: 0.2rem;
     font-size: 0.8rem;
     border-bottom: 1px solid #008ED6; }
   .form-group .username {
     background: url(../images/ico-user.png) no-repeat 0.5rem center; }
   .form-group .password {
     background: url(../images/ico-password.png) no-repeat 0.5rem center; }
+  .form-group span {
+    font-size: 0.6rem;
+    line-height: 1rem;
+    visibility: hidden;
+    padding-left: 1rem; }
+  .form-group .error {
+    color: #f25f11;
+    visibility: visible; }
+  .form-group .errorSec {
+    color: #f25f11;
+    visibility: visible; }
 
 .btn-wrap {
   -webkit-box-flex: 450;
@@ -116,5 +127,42 @@ article {
     font-size: 1rem;
     letter-spacing: 0.5rem;
     background: #008ED6; }
+
+.signing-wrap {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.41);
+  top: 0;
+  left: 0;
+  display: none; }
+  .signing-wrap span, .signing-wrap em {
+    position: absolute;
+    top: 50%;
+    color: #FFFFFF; }
+  .signing-wrap span {
+    left: 40%;
+    width: 3rem;
+    height: 3rem;
+    background: #FFFFFF;
+    animation: 2s rotateplane infinite; }
+  .signing-wrap em {
+    left: 50%;
+    font-size: 3rem;
+    transform: translateX(-50%);
+    display: none; }
+    .signing-wrap em:before {
+      content: "\f00c"; }
+
+@keyframes rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
+  50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }
 
 /*# sourceMappingURL=sign.css.map */
