--- a/css/sign.css
+++ b/css/sign.css
@@ -38,7 +38,7 @@ html, body {
 
 .fa {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
+  font: normal normal normal 14px/1 FontAwesome, "微软雅黑";
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -54,7 +54,7 @@ header {
   display: -webkit-box;
   -webkit-box-pack: center;
   -webkit-box-align: center;
-  background: #008ED6;
+  background: #15C6DA;
   font-size: 1.2rem;
   color: #FFFFFF;
   position: relative; }
@@ -91,7 +91,7 @@ article {
     text-indent: 2.5rem;
     margin-bottom: 0.2rem;
     font-size: 0.8rem;
-    border-bottom: 1px solid #008ED6; }
+    border-bottom: 1px solid #15C6DA; }
   .form-group .username {
     background: url(../images/ico-user.png) no-repeat 0.5rem center; }
   .form-group .password {
