--- a/css/category.css
+++ b/css/category.css
@@ -70,14 +70,28 @@ article {
     -webkit-box-flex: 100;
     height: 0;
     width: 100%;
-    background: #e63939;
     overflow: hidden; }
     article .banner ul {
+      width: 300%;
       overflow: hidden; }
       article .banner ul li {
-        height: 7.9rem; }
+        float: left; }
         article .banner ul li img {
           width: 100%; }
+    article .banner .swiper-pagination {
+      margin: 0 auto;
+      transform: translateY(-2.5rem);
+      text-align: center;
+      height: 1rem; }
+      article .banner .swiper-pagination span {
+        display: inline-block;
+        width: 0.4rem;
+        height: 0.4rem;
+        margin-right: 0.3rem;
+        border: 0.1rem solid #f1e6e6;
+          border-radius: 50%; }
+      article .banner .swiper-pagination .swiper-pagination-bullet-active {
+        background: #f1e6e6; }
   article .nav-wrap {
     -webkit-box-flex: 235;
     height: 0;
@@ -128,7 +142,8 @@ footer {
   display: -webkit-box;
   -webkit-box-pack: center;
   -webkit-box-align: center;
-  background: #F4F4F4; }
+  background: #F4F4F4;
+  color: #92278F; }
   footer ul {
     width: 100%; }
     footer ul li {
